# fastapi-bff

./: .gitignore  LICENSE  README.md  fastapi-bff.service  pyproject.toml  services-api-docs.md
.github/workflows/: deploy.yml
app/: main.py
app/api/: achievements.py  auth.py  checkins.py  comments.py  courses.py  feed.py  feedback.py  feedback_generic.py  game_list.py  game_score.py  health.py  knowledge.py  leaderboard.py  lessons.py  posts.py  services.py  settings.py  shop.py  stats.py
app/core/: config.py  context.py  dependencies.py  exception_handler.py  exceptions.py  response.py
app/schemas/: auth.py  comment.py  common.py  feedback.py  feedback_generic.py  game_list.py  game_score.py  knowledge.py  leaderboard.py  lesson.py  post.py  services.py  settings.py  shop.py
app/services/: achievement_service.py  auth_service.py  checkin_service.py  comment_service.py  courses_service.py  feed_service.py  feedback_generic_service.py  feedback_service.py  game_list_service.py  game_score_service.py  knowledge_service.py  leaderboard_service.py  lesson_service.py  post_service.py  services_service.py  session_token_service.py  settings_service.py  shop_service.py  stats_service.py  supabase.py  user_service.py  verification_code_service.py
app/stores/: auth_user_store.py  session_token_store.py  verification_code_store.py
app/utils/: code_util.py  email_util.py  password_util.py  storage_util.py  token_util.py
