[project]
name = "fastapi-bff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
]
